[package]
name = "project-euler"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.15.0"
memoization-macro = { path = "./memoization-macro"}
async-recursion = "1.0.0"
tokio = { version = "1.21", features = ["full"] }
